--- a/Aula6/index.html
+++ b/Aula6/index.html
@@ -13,6 +13,7 @@
             <a href="index.html">Home</a> |
             <a href="pag2.html">Colunas</a> |
             <a href="pag3.html">Sombra</a> |
+            <a href="pag4.html">Fontes</a> |
         </nav>
         <section id="main">
             <h1>Overflow</h1>
